--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mdsd.telemedicine">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".base.BaseApplication"
         android:theme="@style/AppTheme">
         <activity android:name=".module.launcher.SplashActivity">
             <intent-filter>
@@ -26,28 +29,16 @@
             android:label="@string/title_activity_settings_url"/>
         <activity
             android:name=".module.main.MainActivity"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustPan"/>
 
         <service android:name=".service.AudioService"/>
 
-        <receiver
-            android:name=".receiver.ScanReceiver"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.android.server.scannerservice.broadcast"/>
-                <action android:name="SYSTEM_BAR_READ"/>
-                <action android:name="lachesis_barcode_value_notice_broadcast"/>
-            </intent-filter>
-        </receiver>
-
         <activity
             android:name=".module.patient.PatientSelectorActivity"
             android:configChanges="orientation|keyboardHidden">
         </activity>
-     
+
     </application>
 
 </manifest>
